--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -1,15 +1,139 @@
-@inproceedings{Mog, 
+@INPROCEEDINGS{mog, 
+author={C. Stauffer and W. E. L. Grimson}, 
+booktitle={Proceedings. 1999 IEEE Computer Society Conference on Computer Vision and Pattern Recognition (Cat. No PR00149)}, 
+title={Adaptive background mixture models for real-time tracking}, 
+year={1999}, 
+volume={2}, 
+number={}, 
+pages={246-252 Vol. 2}, 
+doi={10.1109/CVPR.1999.784637}, 
+ISSN={1063-6919}, 
+month={June},}
+
+@inproceedings{mog_improved, 
 author={Z. Zivkovic}, 
 booktitle={Proceedings of the 17th International Conference on Pattern Recognition, 2004. ICPR 2004.}, 
 title={Improved adaptive Gaussian mixture model for background subtraction}, 
 year={2004}, 
 volume={2}, 
 number={}, 
-pages={28-31 Vol.2}, 
-keywords={Gaussian processes;computer vision;recursive functions;adaptive Gaussian mixture model;background subtraction;computer vision;pixel-level approach;probability density;recursive equations;Layout;Pixel;Object detection;Density functional theory;Intelligent systems;Computer vision;Adaptive algorithm;Equations;Cameras;Surveillance}, 
+pages={28-31 Vol.2},  
 doi={10.1109/ICPR.2004.1333992}, 
 ISSN={1051-4651}, 
 month={Aug},}
+
+@article{bg_codebook,
+title = "Real-time foreground–background segmentation using codebook model",
+journal = "Real-Time Imaging",
+volume = "11",
+number = "3",
+pages = "172 - 185",
+year = "2005",
+note = "Special Issue on Video Object Processing",
+issn = "1077-2014",
+doi = "https://doi.org/10.1016/j.rti.2004.12.004",
+url = "http://www.sciencedirect.com/science/article/pii/S1077201405000057",
+author = "Kyungnam Kim and Thanarat H. Chalidabhongse and David Harwood and Larry Davis"
+}
+
+@ARTICLE{bg_fuzzy, 
+author={D. K. Panda and S. Meher}, 
+journal={IEEE Signal Processing Letters}, 
+title={Detection of Moving Objects Using Fuzzy Color Difference Histogram Based Background Subtraction}, 
+year={2016}, 
+volume={23}, 
+number={1}, 
+pages={45-49}, 
+doi={10.1109/LSP.2015.2498839}, 
+ISSN={1070-9908}, 
+month={Jan}}
+
+@article{van2014vibe,
+  title={ViBe: A disruptive method for background subtraction},
+  author={Van Droogenbroeck, Marc and Barnich, Olivier},
+  journal={Background Modeling and Foreground Detection for Video Surveillance},
+  pages={7--1},
+  year={2014},
+  publisher={Chapman and Hall/CRC}
+}
+
+@inproceedings{cucchiara2001detecting,
+  title={Detecting objects, shadows and ghosts in video streams by exploiting color and motion information},
+  author={Cucchiara, Rita and Grana, Costantino and Piccardi, Massimo and Prati, Andrea},
+  booktitle={Image Analysis and Processing, 2001. Proceedings. 11th International Conference on},
+  pages={360--365},
+  year={2001},
+  organization={IEEE}
+}
+
+@INPROCEEDINGS{sanin2010detecting, 
+author={A. Sanin and C. Sanderson and B. C. Lovell}, 
+booktitle={2010 20th International Conference on Pattern Recognition}, 
+title={Improved Shadow Removal for Robust Person Tracking in Surveillance Scenarios}, 
+year={2010}, 
+volume={}, 
+number={}, 
+pages={141-144}, 
+doi={10.1109/ICPR.2010.43}, 
+ISSN={1051-4651}, 
+month={Aug}}
+
+@inproceedings{tang2017multiple,
+  title={Multiple people tracking by lifted multicut and person reidentification},
+  author={Tang, Siyu and Andriluka, Mykhaylo and Andres, Bjoern and Schiele, Bernt},
+  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+  pages={3539--3548},
+  year={2017}
+}
+
+@inproceedings{zhang2016single,
+  title={Single-image crowd counting via multi-column convolutional neural network},
+  author={Zhang, Yingying and Zhou, Desen and Chen, Siqin and Gao, Shenghua and Ma, Yi},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={589--597},
+  year={2016}
+}
+
+@INPROCEEDINGS{5597093, 
+author={E. Corvee and F. Bremond}, 
+booktitle={2010 7th IEEE International Conference on Advanced Video and Signal Based Surveillance}, 
+title={Body Parts Detection for People Tracking Using Trees of Histogram of Oriented Gradient Descriptors}, 
+year={2010}, 
+volume={}, 
+number={}, 
+pages={469-475}, 
+doi={10.1109/AVSS.2010.51}, 
+ISSN={}, 
+month={Aug}}
+
+@InProceedings{10.1007/3-540-47979-1_25,
+author="Siebel, Nils T.
+and Maybank, Steve",
+editor="Heyden, Anders
+and Sparr, Gunnar
+and Nielsen, Mads
+and Johansen, Peter",
+title="Fusion of Multiple Tracking Algorithms for Robust People Tracking",
+booktitle="Computer Vision --- ECCV 2002",
+year="2002",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="373--387",
+isbn="978-3-540-47979-6"
+}
+
+@article{LERDSUDWICHAI20051059,
+title = "Tracking multiple people with recovery from partial and total occlusion",
+journal = "Pattern Recognition",
+volume = "38",
+number = "7",
+pages = "1059 - 1070",
+year = "2005",
+issn = "0031-3203",
+doi = "https://doi.org/10.1016/j.patcog.2004.11.022",
+url = "http://www.sciencedirect.com/science/article/pii/S0031320305000191",
+author = "Charay Lerdsudwichai and Mohamed Abdel-Mottaleb and A-Nasser Ansari"
+}
 
 @misc{backgroundsubtractormog,
   title = {BackgroundSubtractorMOG2 Class Definition},
